--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,13 @@
     /* spacing between right section items */
     margin: 0 10px;
 }
+
+button {
+    background-color: #2774AE; 
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
