--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,13 @@
     text-align: center;
 }
 .logo {
-    /* makes a circular image */
-    border-radius: 999px;
-    height: 40px;
+    height: 50px;
 }
 .App-header {
     /* navbar using flexbox model */
     display: flex;
     align-items: center;
-    background-color: lightgray;
+    background-color: white;
     height: 60px;
     margin-bottom: 5px;
     box-shadow: 0 0 10px 0 #000;
@@ -57,7 +55,7 @@ button {
 	/*transition: transform 80ms*/
   }
 
-input {
+.textbox {
 	background-color: #eee;
 	border: none;
 	padding: 12px 15px;
