Add highlighting to selection
The autoselect box now highlights the thing the user is hovering over.

--- a/src/AutoCompleteText.css
+++ b/src/AutoCompleteText.css
@@ -21,6 +21,9 @@
     padding: 0;
 }
 
+.AutoCompleteText li:hover {
+    background-color: cadetblue;
+}
 .AutoCompleteText ul::before {
     content: "";
 }
