--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,8 @@ body {
 }
 
 .inputTitle {
-    text-align: left;
-    padding-left: 36.5%; 
+    /*text-align: center;*/
+    /*padding-left: 36.5%;*/
     color: #2774AE;
 }
 
@@ -102,6 +102,16 @@ body {
 }
 
 .grouplist {
-    text-align: left;
-    padding-left: 38.5%;
+    text-align: center;
+    /*padding-left: 38.5%;*/
+}
+
+h1 {
+    color: #2774AE;
+}
+
+li {
+    margin: auto;
+    padding-right: 15%;
+    width: 9%;
 }
