--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ body {
 }
 
 .grouplist {
-    text-align: center;
+    text-align: left;
     /*padding-left: 38.5%;*/
 }
 
@@ -112,6 +112,6 @@ h1 {
 
 li {
     margin: auto;
-    padding-right: 15%;
-    width: 9%;
+    padding-right: 0%;
+    width: 8%;
 }
