Adjusted color of Class Autocomplete to match theme
Changed .AutoComplete Text li:hover to have the text be white and the
background color be UCLA Blue.

--- a/src/AutoCompleteText.css
+++ b/src/AutoCompleteText.css
@@ -22,8 +22,10 @@
 }
 
 .AutoCompleteText li:hover {
-    background-color: cadetblue;
+    color: white;
+    background-color: #2774AE;
 }
+
 .AutoCompleteText ul::before {
     content: "";
 }
