Centered Group Title Centered "Your Study Sleuth" group title in the dashboard.

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,11 @@ body {
     color: #2774AE;
 }
 
+.GroupTitle {
+    text-align: center;
+    color: #2774AE;
+}
+
 .selector {
     background-color: #eee;	
     border: none;
