Update Dashboard Button Changed Button so label does not wrap

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ body {
 	text-transform: uppercase;
     text-decoration: none;
     cursor: pointer;
-	width: 15%;
+	width: 220px;
 }
 
 .textbox {
